# quant-trading-experiments

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/: README.md
docs/: BLOGPOST_DATA_AND_SIGNALS.md  CODE_REVIEW.md  METHODOLOGY.md
docs/blog_series/: part2_percentile_cutoffs.md  part3_weight_schemes.md  part4_combining_signals.md  part5_ml_methods.md
examples/: sma_crossover_demo.py
ff-export/: .gitignore  README.md  ff_factor_replication.ipynb
ff-repo-files/: requirements.txt
notebooks/: 01_factor_construction.ipynb  02_single_factor_strategies.ipynb  03_combined_signal_methods.ipynb  04_ml_return_prediction.ipynb  05_ff_factor_replication.ipynb  05_pairs_trading.ipynb
scripts/: test_ml_models.py
src/quant_trading/: __init__.py  backtest.py  data.py  evaluation.py  factors.py  plotting.py  portfolio.py  signals.py  strategies.py  strategy.py  tuning.py
tests/: test_backtest.py  test_data.py  test_evaluation.py  test_factors.py  test_portfolio.py  test_signals.py  test_strategy.py  test_tuning.py
