[project]
name = "fama-french-portfolio-replication"
version = "0.1.0"
description = "Replication of Fama-French SMB and HML portfolios from WRDS/JKP data"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "pandas-datareader",
    "tqdm",
    "plotly",
    "scikit-learn",
    "optuna",
    "statsmodels",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
ml = [
    "tensorflow",
    "torch",
    "ipca",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
